RESOLVED FIXED Bug 100003
Viewport errors should be slightly friendlier with regard to ';'.
https://bugs.webkit.org/show_bug.cgi?id=100003
Summary Viewport errors should be slightly friendlier with regard to ';'.
Mike West
Reported 2012-10-22 08:39:54 PDT
Errors like "Viewport argument value "device-width;" for key "width" not recognized. Content ignored." could probably be cleaned up if the error message made the error more explicit. Adding a quick message that explicitly notes that ';' should be replaced with a comma is trivial, doesn't change behavior in any way, but would likely help developers.
Attachments
Patch (9.64 KB, patch)
2012-10-22 08:43 PDT, Mike West
no flags
Patch (9.63 KB, patch)
2012-10-23 00:32 PDT, Mike West
no flags
Mike West
Comment 1 2012-10-22 08:43:22 PDT
Mike West
Comment 2 2012-10-22 08:49:37 PDT
Hey Adam. It looks like you reviewed the last non-rubberstamped change to this file. Are you the right guy to review this change? If not, can you point me at someone who might be right? Thanks!
Adam Barth
Comment 3 2012-10-22 09:17:30 PDT
Comment on attachment 169920 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169920&action=review > Source/WebCore/dom/ViewportArguments.cpp:367 > + message = message + " Note that ';' is not a separator in viewport values. The list should be comma-separated."; message.append(...)
Mike West
Comment 4 2012-10-23 00:32:51 PDT
Mike West
Comment 5 2012-10-23 00:33:35 PDT
Comment on attachment 170073 [details] Patch Dropping r?, carrying over Adam's r+ and throwing this into the queue.
WebKit Review Bot
Comment 6 2012-10-23 00:58:56 PDT
Comment on attachment 170073 [details] Patch Clearing flags on attachment: 170073 Committed r132186: <http://trac.webkit.org/changeset/132186>
WebKit Review Bot
Comment 7 2012-10-23 00:59:00 PDT
All reviewed patches have been landed. Closing bug.
John Mellor
Comment 8 2012-10-23 03:02:36 PDT
Good idea - thanks for cleaning this up!
Note You need to log in before you can comment on or make changes to this bug.